--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-theme="nord">
+<html data-theme="dark">
 
 </html>
 <html lang="en">
@@ -13,14 +13,14 @@
     <title>site roller test.</title>
 </head>
 
-<body class="bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500">
+<body class="bg-[url()] bg-cover bg-center">
 <div>
     <div class="container pt-5 w-300 m-auto bg-base-100 p-5 max-md:w-100">
-        <div class="w-200 m-auto max-md:w-90">
+        <div class="w-180 m-auto max-md:w-90 min-lg:w-200">
         <div class="grid grid-cols-1 min-md:grid-cols-2 gap-5">
-            <div class="bg-[url(https://66.media.tumblr.com/247a31f83771e21f13c107f34e7c1a40/tumblr_nbnqe8Kuk31tombhfo1_500.gif)] bg-cover bg-center">
+            <div class="bg-[url()] bg-cover bg-center">
             <div class="justify-center flex flex-col">
-                <div class="w-90 m-auto min-md:w-80 min-md:flex-1 min-md:pt-22.5">
+                <div class="w-90 m-auto min-md:w-80 min-md:flex-1 min-md:pt-20">
                     <div class="card bg-primary card-sm shadow-sm">
                         <div class="card-body">
                             <button class="text-white card-title text-2xl btn bg-primary border-primary justify-start">SAO-RPG Dice Roller</button>
@@ -31,11 +31,11 @@
                             <p class="bg-base-100 p-3">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis nisi posuere, egestas lorem nec, malesuada metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
                             </p>
-                            <div class="flex flex-row gap-1">
+                            <div class="flex flex-row gap-1 m-auto bg-base-100/80 border-base-100/30 border-1 rounded-lg">
                                 <div>
                                     <div class="tooltip grow tooltip-top" style="--tt-off:calc(120%)" >
                                         <label for="modal_settings" class="btn btn-xs btn-ghost justify-start">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-gear-fill" viewBox="0 0 16 16">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="var(--color-base-content)" class="bi bi-gear-fill" viewBox="0 0 16 16">
                                                 <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
                                               </svg>
                                             </label>
@@ -47,11 +47,13 @@
                                 </div>
                                 <div>
                                     <div class="tooltip grow tooltip-top" style="--tt-off:calc(120%)" >
+                                        <a href="https://discord.gg/p2zsGGJ" target="_blank">
                                         <label class="btn btn-xs btn-ghost justify-start">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-discord" viewBox="0 0 16 16">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="var(--color-base-content)" class="bi bi-discord" viewBox="0 0 16 16">
                                                 <path d="M13.545 2.907a13.2 13.2 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.2 12.2 0 0 0-3.658 0 8 8 0 0 0-.412-.833.05.05 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.04.04 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032q.003.022.021.037a13.3 13.3 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019q.463-.63.818-1.329a.05.05 0 0 0-.01-.059l-.018-.011a9 9 0 0 1-1.248-.595.05.05 0 0 1-.02-.066l.015-.019q.127-.095.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.05.05 0 0 1 .053.007q.121.1.248.195a.05.05 0 0 1-.004.085 8 8 0 0 1-1.249.594.05.05 0 0 0-.03.03.05.05 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.2 13.2 0 0 0 4.001-2.02.05.05 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.03.03 0 0 0-.02-.019m-8.198 7.307c-.789 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612m5.316 0c-.788 0-1.438-.724-1.438-1.612s.637-1.613 1.438-1.613c.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612"/>
                                               </svg>
                                             </label>
+                                        </a>
                                         <div class="tooltip-content text-xs">
                                             Join our Discord!
                                         </div>
@@ -59,18 +61,20 @@
                                 </div>
                                 <div>
                                     <div class="tooltip grow tooltip-top" style="--tt-off:calc(120%)" >
+                                        <a href="https://www.sao-rpg.com/" target="_blank">
                                         <label class="btn btn-xs btn-ghost justify-start">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-pen-fill" viewBox="0 0 16 16">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="var(--color-base-content)" class="bi bi-pen-fill" viewBox="0 0 16 16">
                                                 <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001"/>
                                               </svg>
                                             </label>
+                                        </a>
                                         <div class="tooltip-content text-xs">
                                             Return to SAO-RPG
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="max-md:h-1.5"></div>
                         </div>
                     </div>
                 </div>
@@ -83,7 +87,7 @@
                     <label class="tab text-primary">
               <input type="radio" name="sao_roller" checked="checked"/>
               <div class="mr-1.5">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dice-3" viewBox="0 0 16 16">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dice-3 bi-tab" viewBox="0 0 16 16">
                   <path d="M13 1a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2zM3 0a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V3a3 3 0 0 0-3-3z"/>
                   <path d="M5.5 4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m8 8a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m-4-4a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
                 </svg>
@@ -112,7 +116,7 @@
 
                         <div class="collapse bg-base-100 border-base-100 collapse-arrow">
                             <input type="checkbox" />
-                            <div class="collapse-title font-semibold text-gray-400 text-ssm/8 pl-2 align-middle">Advanced Roll Options</div>
+                            <div class="collapse-title font-semibold text-base-content/35 text-ssm/8 pl-2 align-middle">Advanced Roll Options</div>
                             <div class="collapse-content text-sm">
                                 <div class="flex flex-col gap-1">
                                     <div class="flex flex-row gap-0 p-0">
@@ -156,37 +160,53 @@
                     <label class="tab text-primary">
                         <input type="radio" name="sao_roller" />
                         <div class="mr-1.5">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search bi-tab" viewBox="0 0 16 16">
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
                         </svg>
                         </div>
                         <p class="font-semibold">Roll Lookup</p>
                         </label>
-                    <div class="tab-content bg-base-100 border-base-300 p-6">
-                        <div class="flex flex-col gap-5">
+                    <div class="tab-content bg-base-100 border-base-300">
+                        <div class="flex flex-col">
+                            <div class="min-md:h-3"></div>
+                            <div class=" pl-5 pt-5">
                             <fieldset class="fieldset">
-                                <legend class="fieldset-legend text-sm">Search by Name.</legend>
-                                <input id="field_lookup_name" type="text" class="input" placeholder="Name" />
-                                <div>
-                                    <button id="btn_lookup_name" class="btn  text-white bg-primary border-primary btn-sm">Search!</button>
-                                </div>
-                            </fieldset>
-
-                            <fieldset class="fieldset">
-                                <legend class="fieldset-legend text-sm">Search by Roll ID.</legend>
+                                <legend class="fieldset-legend">Search by Roll ID#</legend>
                                 <input id="field_lookup_id" type="text" class="input" placeholder="Roll ID#" />
                                 <div>
                                     <button id="btn_lookup_id" class="btn text-white bg-primary border-primary btn-sm">Search by ID!</button>
                                 </div>
+                            </div>
                             </fieldset>
-
-                            <fieldset class="fieldset">
-                                <legend class="fieldset-legend text-sm">Search by Post Link.</legend>
-                                <input id="field_lookup_url" type="text" class="input" placeholder="Roll ID#" />
-                                <div>
-                                    <button id="btn_lookup_url" class="btn text-white bg-primary border-primary btn-sm">Search by Post Link!</button>
+                            <div class="collapse bg-base-100 collapse-arrow pl-1.5">
+                                <input type="checkbox"/>
+                                <div class="collapse-title font-semibold text-base-content/35 text-ssm/8">Search by Name.</div>
+                                <div class="collapse-content text-sm">
+                                    <fieldset class="fieldset">
+                                        <input id="field_lookup_name" type="text" class="input" placeholder="Name" />
+                                        <div>
+                                            <button id="btn_lookup_name" class="btn  text-white bg-primary border-primary btn-sm">Search!</button>
+                                        </div>
+                                    </fieldset>
                                 </div>
-                            </fieldset>
+                              </div>
+                              <div class="collapse bg-base-100 collapse-arrow pl-1.5">
+                                <input type="checkbox"/>
+                                <div class="collapse-title font-semibold text-base-content/35 text-ssm/8">Search by Post Link.</div>
+                                <div class="collapse-content text-sm">
+                                    <fieldset class="fieldset">
+                                        <input id="field_lookup_url" type="text" class="input" placeholder="Post Link" />
+                                        <div>
+                                            <button id="btn_lookup_url" class="btn text-white bg-primary border-primary btn-sm">Search by Post Link!</button>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                              </div>
+                              <div class="min-md:h-7"></div>
+
+
+
+
                         </div>
                     </div>
                 </div>
@@ -198,6 +218,8 @@
             <div>
                 <div class="flex flex-row">
                     <div class="grow"></div>
+                    <button class="btn btn-ghost btn-sm">Save Rolls to Clipboard</button>
+                    <div class="p-3"></div>
                     <button class="btn btn-ghost btn-sm">Copy Multiple Rolls</button>
                 </div>
         </div>
@@ -222,10 +244,10 @@
           <tbody>
             <tr>
               <th>A25000</th>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
-              <td>1</td>
+              <td>10</td>
+              <td>12</td>
+              <td>20</td>
+              <td>10</td>
               <td>Cy Ganderton</td>
               <td><div><button class="btn btn-xs btn-ghost">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" class="bi bi-chat-square-fill" viewBox="0 0 16 16">
@@ -430,7 +452,7 @@
     <input type="checkbox" id="modal_settings" class="modal-toggle" />
         <div class="modal" role="dialog">
             <div class="modal-box no-scrollbar">
-                <h3 class="text-lg font-bold text-primary pb-3">Settings.</h3>
+                <h3 class="text-xl font-bold text-primary pl-3 pb-3">Settings.</h3>
                 <div class="flex flex-col gap-5">
                     <div>
                         <div class="flex flex-row">
@@ -454,7 +476,7 @@
                                     <input
                                       type="radio"
                                       name="theme-dropdown"
-                                      class="theme-controller w-full btn btn-sm btn-block btn-ghost justify-start"
+                                      class="theme-controller w-full btn btn-sm btn-ghost justify-start"
                                       aria-label="Light"
                                       value="nord" />
                                   </li>
@@ -462,7 +484,7 @@
                                     <input
                                       type="radio"
                                       name="theme-dropdown"
-                                      class="theme-controller w-full btn btn-sm btn-block btn-ghost justify-start"
+                                      class="theme-controller w-full btn btn-sm btn-ghost justify-start"
                                       aria-label="Dark"
                                       value="dark" />
                                   </li>
@@ -470,7 +492,7 @@
                                     <input
                                       type="radio"
                                       name="theme-dropdown"
-                                      class="theme-controller w-full btn btn-sm btn-block btn-ghost justify-start"
+                                      class="theme-controller w-full btn btn-sm btn-ghost justify-start"
                                       aria-label="Retro"
                                       value="retro" />
                                   </li>
@@ -535,6 +557,7 @@
                                 </div>
                             </div>
                         </div>
+                        <br>
                         </div>
                     </div>
                                 
